[package]
name = "query_router_contract"
version = "0.1.0"
authors = ["Guy Garcia"]
edition = "2018"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
cosmwasm-std = { version = "1.0.0", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "1.0.0", package = "secret-cosmwasm-storage" }
cosmwasm-schema = "1.1.5"